# daft2

./: .gitmodules  _daft2.html  meta.yaml
repo_daft2/: CMakeLists.txt  pyproject.toml
repo_daft2/old_html/: _daft_lib_test.html  _daft_lib_webgl_test.html
repo_daft2/src/daft2/: glfw_js_load.cpp  glfw_js_rawstr.cpp  hello.cpp
repo_daft2/src/daft2/old/: DaftGlfw.cpp  DaftLib.cpp
repo_daft2/src/python_bindings/: module.cpp
repo_daft2/src/python_bindings/daft2/: __init__.py
