[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "daft2"
version = "0.0.1"
description="daft2"
requires-python = ">=3.7"


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/python_bindings/daft2"]
cmake.verbose = true
logging.level = "INFO"
